--- a/adminDashboard/templates/adminDashboard/base.html
+++ b/adminDashboard/templates/adminDashboard/base.html
@@ -1,12 +1,201 @@
-{% include 'adminDashboard/includes/head.html' %}
-{% include 'adminDashboard/includes/topnav.html' %}
-{% include 'adminDashboard/includes/sidenav.html' %}
+{% load static %}
 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>AdminLTE 3 | Dashboard</title>
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- Google Font: Source Sans Pro -->
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/fontawesome-free/css/all.min.css'%}">
+  <!-- Tempusdominus Bbootstrap 4 -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css'%}">
+  <!-- iCheck -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/icheck-bootstrap/icheck-bootstrap.min.css'%}">
+  <!-- JQVMap -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/jqvmap/jqvmap.min.css'%}">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/dist/css/adminlte.min.css'%}">
+  <!-- overlayScrollbars -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/overlayScrollbars/css/OverlayScrollbars.min.css'%}">
+  <!-- Daterange picker -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/daterangepicker/daterangepicker.css'%}">
+  <!-- summernote -->
+  <link rel="stylesheet" href="{% static 'adminDashboard/plugins/summernote/summernote-bs4.css'%}">
+
+</head>
+<body class="hold-transition sidebar-mini layout-fixed">
+<div class="wrapper">
+
+<!-- Main Sidebar Container -->
+{% load static %}
+<!-- Main Sidebar Container -->
+<aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+    <a href="#" class="brand-link " style="background-color:#E9ECEF;">
+        <img src="{% static 'essential/logo.png' %}" alt="AdminLTE Logo" class="brand-image  "
+             style="">
+        <span class="brand-text font-weight-heavy" style="color:black;">NITA-U LMS</span>
+        <div>
+            <span class="brand-text font-weight-heavy"
+                  style="color:black;">Hello,  {{ request.user.first_name }} </span>
+        </div>
+
+    </a>
+
+
+    <!-- Sidebar -->
+    <div class="sidebar">
+
+        <nav class="mt-2">
+            <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                <!-- Add icons to the links using the .nav-icon class
+                     with font-awesome or any other icon font library -->
+
+
+
+                <li class="nav-item has-treeview">
+                    <a href="#" class="nav-link active">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Leave Management
+                            <i class="fas fa-angle-left right"></i>
+                        </p>
+                    </a>
+                    <ul class="nav nav-treeview">
+                        <li class="nav-item">
+                            <a href="{% url 'adminDashboard:LeaveListView'%}" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>All</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'adminDashboard:approved'%}" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Approved Leaves</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'adminDashboard:pending' %}" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Pending Leaves</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'adminDashboard:rejected' %}" class="nav-link">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Rejected</p>
+                            </a>
+                        </li>
+
+                    </ul>
+                </li>
+
+                 <li class="nav-item">
+                    <a href="{% url 'employeeDashboard:apply' %} " class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Apply for Leave
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{% url 'adminDashboard:delegate' %}" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Delegate
+                        </p>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="{% url 'adminDashboard:monetary_value_all_staff' %}" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Monetary Value
+                        </p>
+                    </a>
+                </li>
+
+
+                <li class="nav-item">
+                    <a href="{% url 'logout' %}" class="nav-link">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Logout
+                        </p>
+                    </a>
+                </li>
+
+            </ul>
+        </nav>
+        <!-- /.sidebar-menu -->
+    </div>
+    <!-- /.sidebar -->
+</aside>
 
 {% block content %}
 
 
 
 {% endblock content %}
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
+</div>
+<!-- ./wrapper -->
+<footer class="main-footer">
+    <strong>Proudly Coded by  &copy; 2019-2020 <a href="">Interns(Daniel, Fahad and Stuart Mujuzi)</a>.</strong>
+    <div class="float-right d-none d-sm-inline-block">
+      
+    </div>
+  </footer>
 
-{% include 'adminDashboard/includes/footer.html' %}
+<!-- customJs -->
+<script src="{% static 'adminDashboard/dist/js/custom.js'%}"></script>
+<!-- jQuery -->
+<script src="{% static 'adminDashboard/plugins/jquery/jquery.min.js'%}"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="{% static 'adminDashboard/plugins/jquery-ui/jquery-ui.min.js'%}"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+  $.widget.bridge('uibutton', $.ui.button)
+</script>
+<!-- Bootstrap 4 -->
+<script src="{% static 'adminDashboard/plugins/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+<!-- ChartJS -->
+<script src="{% static 'adminDashboard/plugins/chart.js/Chart.min.js'%}"></script>
+<!-- Sparkline -->
+<script src="{% static 'adminDashboard/plugins/sparklines/sparkline.js'%}"></script>
+<!-- JQVMap -->
+<script src="{% static 'adminDashboard/plugins/jqvmap/jquery.vmap.min.js'%}"></script>
+<script src="{% static 'adminDashboard/plugins/jqvmap/maps/jquery.vmap.usa.js'%}"></script>
+<!-- jQuery Knob Chart -->
+<script src="{% static 'adminDashboard/plugins/jquery-knob/jquery.knob.min.js'%}"></script>
+<!-- daterangepicker -->
+<script src="{% static 'adminDashboard/plugins/moment/moment.min.js'%}"></script>
+<script src="{% static 'adminDashboard/plugins/daterangepicker/daterangepicker.js'%}"></script>
+<!-- Tempusdominus Bootstrap 4 -->
+<script src="{% static 'adminDashboard/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js'%}"></script>
+<!-- Summernote -->
+<script src="{% static 'adminDashboard/plugins/summernote/summernote-bs4.min.js'%}"></script>
+<!-- overlayScrollbars -->
+<script src="{% static 'adminDashboard/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js'%}"></script>
+<!-- AdminLTE App -->
+<script src="{% static 'adminDashboard/dist/js/adminlte.js'%}"></script>
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="{% static 'adminDashboard/dist/js/pages/dashboard.js'%}"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="{% static 'adminDashboard/dist/js/demo.js'%}"></script>
+</body>
+</html>
+
