--- a/adminDashboard/templates/adminDashboard/leavemanagement/pendingleaves.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/pendingleaves.html
@@ -31,6 +31,7 @@
             <div class="row mb-2">
                 <div class="col-sm-6">
                     <h1 class="m-0 text-dark">Dashboard</h1>
+                    
                 </div><!-- /.col -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
@@ -95,19 +96,23 @@
                         <a href="{% url 'adminDashboard:rejected' %}" class="small-box-footer">View </a>
                     </div>
                 </div>
+                
             </div>
-
+            
     </section>
     <!-- /.content -->
 
-
+<section class="content card-body mb-3 ml-2">
+    <p>
+        <h3 class="card-title" style="position:relative; float:left;" >Pending Leave Requests</h3>
+     </p>
+</section>
     <section class="content">
         <!-- Default box -->
+        
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title" style="position:relative; float:left;" >Pending Leave Requests</h3>
-
-
+        
 
                 <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip"
@@ -118,14 +123,30 @@
                         <i class="fas fa-times"></i></button>
                 </div>
 
-<!--                ***************************** SEARCH FEATURE *****************************-->
 
-                <input type="text" id="searchName" onkeyup="findName()" class="searchBox" placeholder="Search by Name...">
+                <!-- Search form -->
 
-                <input type="text" id="searchDirectorate" onkeyup="findDirectorate()" class="searchBox" placeholder="Search by Directorate...">
-
-
-<!--                 ***************************** SEARCH FEATURE *****************************-->
+                <div class="row">
+                    <div class=" col-md-6">
+                        <form class="form-inline ">
+                            
+                            <input class="form-control form-control-sm mr-3 w-50" type="text" id="searchName" onkeyup="findName()" class="searchBox" placeholder="Search by Name..."
+                            aria-label="Search">
+                            <i class="fas fa-search" aria-hidden="true"></i>
+                        </form>
+                        
+                    </div>
+                    
+                    <div class="col-md-6">
+                        <form class="form-inline ">
+                            <input type="text" id="searchDirectorate" onkeyup="findDirectorate()" class=" form-control form-control-sm mr-3 w-50" placeholder="Search by Directorate..." aria-label="Search">
+                            
+                            <i class="fas fa-search" aria-hidden="true"></i>
+                        </form>
+                    </div>
+                </div>
+                
+                <!-- Search form -->
             </div>
             <div class="card-body p-0">
                 <table class="table table-striped projects" id="myTable">
@@ -291,8 +312,6 @@ function findName() {
   }
 }
 
-
-
 function findDirectorate() {
   // Declare variables
   var input, filter, table, tr, td, i, txtValue;
@@ -314,11 +333,9 @@ function findDirectorate() {
     }
   }
 }
-
 </script>
 
 
 {% endblock content %}
-
 
 
