--- a/adminDashboard/templates/adminDashboard/leavemanagement/delegate.html
+++ b/adminDashboard/templates/adminDashboard/leavemanagement/delegate.html
@@ -5,25 +5,6 @@
 <!-- Content Wrapper. Contains page content -->
 
 
-<style>
-
-    .searchBox
-    {
-      background-image: url(/static/essential/search.png); /* Add a search icon to input */
-      background-position: 0px 12px; /* Position the search icon */
-      background-repeat: no-repeat; /* Do not repeat the icon image */
-      background-size: 30px 30px;
-      width: 100%;
-      font-size: 16px; /* Increase font-size */
-      padding-left: 40px !important;
-      border: 10px solid #ddd; /* Add a grey border */
-      margin-bottom: 12px; /* Add some space below the input */
-
-    }
-
-</style>
-
-
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <div class="content-header">
@@ -52,14 +33,17 @@
       </ul>
     {% endif %}
 
+
+    <section class="content card-body mb-3 ml-2">
+        <p>
+        <h3 class="card-title" style="position:relative; float:left;" >All Staff</h3>
+        </p>
+        </section>
     <!-- Main content -->
     <section class="content">
         <!-- Default box -->
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title" style="padding-right: 20px;">All Staff</h3>
-
-
 
                 <div class="card-tools">
                     <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip"
